# koyeb-nb2

./: .dockerignore  .env.dev  .env.prod  Dockerfile  Dockerfile.gocqhttp-nb2  Procfile  README.md  bot-.py  bot-ok.py  bot.py  bot_echo_patched.py  bot_minimal.py  dumbot.md  execute.py  gocqhttp.conf  install-sw.sh  install-sw1.sh  main.py  minibot.py  nb-gocqhttp一键启动.md  nonebot.conf  okteto-stack.yml  okteto-up.bat  okteto.yml  package-lock.json  package.json  pm2-go-cqhttp.bat  poetry-run-py-start_nb2.bat  poetry-use-memo.txt  pubkeys.txt  pyproject.toml  pyproject.toml-  pyproject.toml--  pyrightconfig.json  requirements-dev.txt  requirements-linux.txt  requirements-win.txt  requirements-win1.txt  requirements.txt  run-docker-build.sh  (+20 more)
cachedir/joblib/__main__-C%3A-dl-Dropbox-mat-dir-myapps-pypi-projects-koyeb-nb2-koyeb_nb2-free_dict_wotd/free_dict_wotd/: func_code.py
cachedir/joblib/__main__-C%3A-dl-Dropbox-mat-dir-myapps-pypi-projects-koyeb-nb2-koyeb_nb2-free_dict_wotd/free_dict_wotd/72a755383fba437e4dead6ff3e3d81e3/: metadata.json  output.pkl
cachedir/joblib/koyeb_nb2/free_dict_wotd/free_dict_wotd/: func_code.py
cachedir/joblib/koyeb_nb2/free_dict_wotd/free_dict_wotd/72a755383fba437e4dead6ff3e3d81e3/: metadata.json
go-cqhttp/: config.sample.yml  config.yml-sample  run-pm2-start=go-cqhttp.bat  session.token
go-cqhttp-940fix5/: config.hjson-  device.json  start-go-cqhttp.bat
koyeb_nb2/: __init__.py  bot_response.py  capture_stderr.py  copy-loc  fetch_convbot.py  fetch_qinyunke.py  fetch_zaobao_news_image.py  free_dict_wotd.py  frenchbot.py  germanbot.py  get_file_loc.py  get_heweather.py  jpmatch.py  jsonpath_match.py  koyeb_nb2.py  maiden_chat.py  nb2chan.py  parse_cmd.py  start_gocq.py  url2txt.py
koyeb_nb2/aiml-std-fr/: apparence.aiml  atomique.aiml  comment.aiml  nombres.aiml  profile.aiml  qui.aiml  sexe.aiml  srai.aiml  system.aiml
koyeb_nb2/plugins/: _autohelp.py  _help.py  admin_page.py  autohelp.py  chat.py  config.py  mecho.py  nb2chan.py  news.py  scrape.py  welcome_newmemb.py  wotd.py  zautohelp.py
tests/: test_fetch_convbot.py  test_koyeb_nb2.py  test_parse_cmd.py  test_sanity.py  test_url2txt.py
whl/: fasttext-0.9.2-cp38-cp38-win_amd64.whl
