[tool.poetry]
name = "koyeb-nb2"
version = "0.1.0"
description = ""
authors = ["ffreemt"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
logzero = "^1.7.0"
nonebot2 = "^2.0.0-beta.4"
nonebot-adapter-onebot = "^2.1.1"
httpx = "^0.23.0"
joblib = "^1.1.0"
html2text = "^2020.1.16"
pendulum = "^2.1.2"
jsonpath-ng = "^1.5.3"
requests = "^2.28.1"
aiml = "^0.9.2"
pyquery = "^1.4.3"
setuptools = "^63.2.0"
wheel = "^0.37.1"
readability-lxml = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
respx = "^0.19.2"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
